apache/apache-php5.3/kubernetes/example-namespace-LimitRange.yml
apiVersion: v1
kind: Namespace
metadata:
  name: users-namespace
