apache/apache-php5.3/kubernetes/example-autoscaling-placeholder.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 8
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      priorityClassName: high-priority # 这里指定高优先的 PriorityClass
      containers:
      - name: nginx
        image: ccr.ccs.tencentyun.com/library/pause:latest
        resources:
          requests:
            cpu: 400m
            memory: 800Mi
