apache/apache-php5.3/kubernetes/example-ExternalName.yml
kind: Service
apiVersion: v1
metadata:
  name: mysql-production
  namespace: ms
spec:
  type: ExternalName
  externalName: somedomain.org
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
