apache/apache-php5.3/kubernetes/example-endpoints-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: gitcode-svc
  namespace: external
spec:
  ports:
  - name: https-svc
    protocol: TCP
    port: 443
    targetPort: 443
  - name: ssh-svc
    protocol: TCP
    port: 22
    targetPort: 22
---
apiVersion: v1
kind: Endpoints
metadata:
  name: gitcode-svc
  namespace: external
subsets:
- addresses:
  - ip: 10.50.15.69
  ports:
  - name: https-svc
    port: 443
    protocol: TCP
  - name: ssh-svc
    port: 22
    protocol: TCP
