apache/apache-php5.3/kubernetes/example-endpoints.yml
kind: Service
apiVersion: v1
metadata:
  name: mysql-production
  namespace: ms
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
—--
kind: Endpoints
apiVersion: v1
metadata:
  name: mysql-production
  namespace: ms
subsets:
  - addresses:
      - ip: 10.255.20.176
    ports:
      - port: 3306
