apache/apache-php5.3/kubernetes/example-externalname-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: mysql-svc
  namespace: ms
spec:
  type: ExternalName
  externalName: somedomain.org
  ports:
  - name: mysql-svc
    port: 3306
    protocol: TCP
    targetPort: 3306
