apache/apache-php5.3/kubernetes/example-svc-outside.yml
kind: Service
apiVersion: v1
metadata:
  name: service
spec:
  type: ExternalName
  externalName: <servicename>.<namespace>.svc.cluster.local
