apache/apache-php5.3/kubernetes/example-ingress-websocket.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: rancher
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  proxy_set_header Upgrade "websocket";
    #  proxy_set_header Connection "Upgrade";
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: rancher
  name: rancher
  namespace: cattle-system
spec:
  rules:
  - host: rancher.example.com
    http:
      paths:
      - backend:
          serviceName: rancher
          servicePort: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - ranche.example.comr
    secretName: tls-cert
